# project2_tkachenko_M25_555

./: .gitignore  Makefile  README.md  db_meta.json  demo.cast  pyproject.toml
data/: test.json  users.json
src/: decorators.py
src/primitive_db/: core.py  engine.py  main.py  utils.py
