[tool.poetry]
name = "project2-tkachenko-m25-555"
version = "0.1.0"
description = ""
authors = ["Sonya Tkachenko <sonyatkachenko2003@mail.ru>"]
readme = "README.md"

packages = [
    { include = "src" },
]


[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"
